--- a/src/pages/styles/Login.css
+++ b/src/pages/styles/Login.css
@@ -15,6 +15,7 @@
   align-items: center;
   align-self: flex-start;
   margin: 1rem 0 0 1rem;
+  overflow: hidden;
 }
 
 .login-section .login-back-button .arrow-back {
@@ -56,7 +57,7 @@
 }
 
 .login-section .login-body .password-field .password-field-input {
-  width: 95%;
+  width: 100%;
   border-bottom: none;
   margin: 0;
   padding: 0.1rem 0 0.1rem 0;
