--- a/src/pages/styles/Register.css
+++ b/src/pages/styles/Register.css
@@ -14,6 +14,7 @@
   align-items: center;
   align-self: flex-start;
   margin: 1rem 0 0 1rem;
+  overflow: hidden;
 }
 
 .register .arrow-back {
